--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,6 @@ outer=3.8cm, % Outer margin
 \usepackage{listings}
 \usepackage[vlined,linesnumbered,boxed]{algorithm2e}
 \usepackage{times}
-\usepackage{cleveref}
 \usepackage{bm}
 \usepackage{pgfplots}
 \usepackage{subfig}
@@ -45,9 +44,10 @@ outer=3.8cm, % Outer margin
 \usepackage{multirow}
 \usepackage{setspace}
 \usepackage{enumitem}
-\usepackage[framemethod=TikZ]{mdframed}\mdfsetup{frametitlealignment=\center}
-\usepackage[most]{tcolorbox}
-\tcbuselibrary{theorems}
+\usepackage[framemethod=TikZ]{mdframed}
+\usepackage{cleveref}
+%\usepackage[most]{tcolorbox}
+%\tcbuselibrary{theorems}
 
 
 %%% Colors ====================================================================
@@ -60,6 +60,7 @@ outer=3.8cm, % Outer margin
 \definecolor{blue_1}{RGB}{51,102,204}
 \definecolor{red_1}{RGB}{220,57,18}
 \definecolor{green_1}{RGB}{16,150,24}
+
 
 \definecolor{mix_green_blue}{RGB}{34,126,14}
 
