--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -60,12 +60,13 @@ A formula is said to be
 otherwise the formula is \emph{unsatisfiable} (\unsat).
 
 In order to compare different formulas, we define here the concepts of logical equivalence and logical consequence
-respectively defined in \Cref{def:equiv} and \Cref{def:logcons}.
+respectively defined in Definition~\ref{def:equiv} and Definition~\ref{def:logcons}.
 
 \begin{definition}[Logical equivalence]\label{def:equiv}
 	Two formulas $\varphi$ and $\psi$ are equivalent iff every assignment $\alpha$ that satisfies 
 	formula $\varphi$  also models the formula $\psi$ and vice-versa, denoted by $\varphi \equiv \psi$.
 \end{definition}
+
 
 \begin{definition}[Logical consequence]\label{def:logcons}
 	A formula $\psi$ is a \emph{logical consequence} of a formula $\varphi$ if every model of $\varphi$
