--- a/introduction.tex
+++ b/introduction.tex
@@ -21,8 +21,8 @@ polynomial time is equivalent to the P versus NP, one of the seven millennium pr
 Despite this complexity, SAT solver are becoming more and more powerful.
 Over the last decades, these can handle more and more complicated problems in different domains:
 like \emph{formal methods} such that: bounded model checking (BMC)~\cite{bmc_99}; \emph{artificial intelligence}: planning decision~\cite{planning_92}; \emph{Informatics} : Haplotype inference~\cite{biology_06}.
-In a recent work, a SAT solver could solve the Pythagorean triple problem~\cite{heule2016solving}, an old mathematical conjecture,
-with a proof of 200 TB.
+In recent work, researchers have succeeded in proving, using a SAT solver, a maximum limit
+for the problem of colouring Pythagorean triples~\cite{heule2016solving}, with proof weighing 200 TB.
 This success comes from the introduction of sophisticated heuristics and optimization of the solving 
 algorithm called Conflict Driven Clause Learning (CDCL) algorithm. It is based on the first non memory
 intensive algorithm named by its authors Davis, Putnam, Logemann, and Loveland (DPLL)~\cite{dpll_62}.
