--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage[a4paper,     inner=3cm, % Inner margin
 outer=3.8cm, % Outer margin
 ]{geometry}
-
+\linespread{1.15}
 \usepackage{minitoc} 
 \usepackage[utf8]{inputenc}
 \usepackage{tabularx}
