--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,7 @@ outer=3.8cm, % Outer margin
 \usetikzlibrary{calc,decorations.markings}
 \usetikzlibrary{decorations.text}
 \usetikzlibrary{patterns}
+\usetikzlibrary{arrows.meta}
 
 %%% Listings ==================================================================
 \usepackage{listings}
