--- a/title.tex
+++ b/title.tex
@@ -7,7 +7,7 @@
 \hfill
 \includegraphics[keepaspectratio=true, height=.1\textheight]
                 {img/logo-edite.pdf}
-\vspace{1cm}
+\vspace{.3cm}
 
 \textsc{%
   \textbf{\large\'Ecole doctorale EDITE de Paris (ED130)}%
@@ -34,12 +34,12 @@
 }
 \vspace{.5cm}\\
 \begin{tabular}{rll}
-  \textit{Rapporteurs :}  & \textsc{Y. XXX}  & XXX\\
-                          & \textsc{Y. XXX}  & XXX\\
-  \textit{Examinateurs :} & \textsc{Y. XXX}  & XXX\\
-                          & \textsc{Y. XXX}  & XXX\\
-                          & \textsc{Y. XXX}  & XXX\\
-                          & \textsc{Y. XXX}  & XXX\\
+  \textit{Rapporteurs :}  & \textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Lorraine\\
+                          & \textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
+  \textit{Examinateurs :} & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
+                          & \textsc{Emanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
+                          & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
+                          & \textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
 \end{tabular}\\
 \tikz[remember picture]\node (titleborderdown) {};
 \begin{tikzpicture}[remember picture, overlay]
